fix: Add-data-target component not visible

--- a/projects/hslayers/src/css/hslayers-bootstrap.scss
+++ b/projects/hslayers/src/css/hslayers-bootstrap.scss
@@ -393,11 +393,7 @@ $table-group-separator-color: white;
     min-height: 100px;
   }
 
-  .hs-ows-shp-advanced {
-    margin-top: 10px;
-  }
-
-  .hs-ows-vector-advanced {
+  .hs-advanced-options {
     margin-top: 10px;
   }
 
